crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__example_inlined_entry_strategy.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
snapshot_kind: text
---
============================= test.tsx ==
import { componentQrl } from "@qwik.dev/core";
import { useBrowserVisibleTaskQrl } from "@qwik.dev/core";
import { useStylesQrl } from "@qwik.dev/core";
import { inlinedQrl } from "@qwik.dev/core";
import { useStore } from '@qwik.dev/core';
import { thing } from './sibling';
import mongodb from "mongodb";
export const Child = componentQrl(() => {
	useStylesQrl("somestring", "Child_component_useStyles_qBZTuFM0160");
	const state = useStore({ count: 0 });
	// Double count watch
	useBrowserVisibleTaskQrl(() => {
		state.count = thing.doStuff() + import("./sibling");
	}, "Child_component_useBrowserVisibleTask_0IGFPOyJmQA", [state]);
	return _jsxSorted("div", { "q-e:click": inlinedQrl(() => console.log(mongodb), "Child_component_div_q_e_click_cROa4sult1s") }, null, null, 1, null);
}, "Child_component_9GyF01GDKqw");

== DIAGNOSTICS ==
[]
