crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__example_input_bind.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
snapshot_kind: text
---
============================= test.js ==
import { componentQrl } from "@qwik.dev/core";
export const Greeter = /*#__PURE__*/ componentQrl(() => {
    const value = useSignal(0);
    const checked = useSignal(false);
    const stuff = useSignal();
    return /*#__PURE__*/ _jsxSorted(_Fragment, null, null, [
        /*#__PURE__*/ _jsxSorted("input", { "bind:value": value }, null, null, 1, null),
        /*#__PURE__*/ _jsxSorted("input", { "bind:checked": checked }, null, null, 1, null),
        /*#__PURE__*/ _jsxSorted("input", { "bind:stuff": stuff }, null, null, 1, null),
        /*#__PURE__*/ _jsxSorted("div", null, null, value, 1, null),
        /*#__PURE__*/ _jsxSorted("div", null, null, value.value, 1, null)
    ], 1, null);
}, "s_n7HuG2hhU0Q");

== DIAGNOSTICS ==
[]
