crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__example_invalid_references.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
snapshot_kind: text
---
============================= test.js ==
import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { $, component$ } from "@qwik.dev/core";
const [I2, { I3, v1: [I4], I5 = v2, ...I6 }, I7 = v3, ...I8] = obj;
class I10 {}
export const App = qrl(() => import("./test.tsx_App_Jlq9hNxnCvw"), "App_Jlq9hNxnCvw");

============================= test.tsx_App_component_ckEPmXZlub0.js (ENTRY POINT) ==
export const App_component_ckEPmXZlub0 = () => {
		return (
			<I10></I10>
		)
	};
/*
{
  "origin": "test.tsx",
  "name": "App_component_ckEPmXZlub0",
  "entry": null,
  "displayName": "test.tsx_App_component",
  "hash": "ckEPmXZlub0",
  "canonicalFilename": "test.tsx_App_component_ckEPmXZlub0",
  "path": "",
  "extension": "js",
  "parent": "App_Jlq9hNxnCvw",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    299,
    342
  ]
}
*/
============================= test.tsx_App_Jlq9hNxnCvw.js (ENTRY POINT) ==
import { $ } from "@qwik.dev/core";
const I1 = 12;
function I9() {}
export const App_Jlq9hNxnCvw = ({count}) => {
	console.log(I1, I2, I3, I4, I5, I6, I7, I8, I9);
	console.log(itsok, v1, v2, v3, obj);
	return $(() => {
		return (
			<I10></I10>
		)
	});
};
/*
{
  "origin": "test.tsx",
  "name": "App_Jlq9hNxnCvw",
  "entry": null,
  "displayName": "test.tsx_App",
  "hash": "Jlq9hNxnCvw",
  "canonicalFilename": "test.tsx_App_Jlq9hNxnCvw",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    177,
    346
  ],
  "paramNames": [
    "_rawProps"
  ]
}
*/
== DIAGNOSTICS ==
[
  {
    "scope": "optimizer",
    "category": "error",
    "code": "C02",
    "file": "test.tsx",
    "message": "Reference to identifier 'I10' can not be used inside a Qrl($) scope because it's a function"
  },
  {
    "scope": "optimizer",
    "category": "error",
    "code": "C02",
    "file": "test.tsx",
    "message": "Reference to identifier 'I10' can not be used inside a Qrl($) scope because it's a function"
  },
  {
    "scope": "optimizer",
    "category": "error",
    "code": "C02",
    "file": "test.tsx",
    "message": "Reference to identifier 'I9' can not be used inside a Qrl($) scope because it's a function"
  }
]
