crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__example_issue_33443.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
---
============================= test.js ==
import { _noopQrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { component$, useSignal } from "@qwik.dev/core";
const q__u6BtPnK76q4 = /* @__PURE__ */ _noopQrl("_u6BtPnK76q4");
q__u6BtPnK76q4.s(({ description = "", other }: any) => {
	const counter = useSignal(0);
	return <div title={description && "description" in other ? `Hello ${counter.value}` : `Bye ${counter.value}`}>
		Issue3742
		<button onClick$={() => counter.value++}>
			Increment
		</button>
		</div>;
});
export const Issue3742 = componentQrl(q__u6BtPnK76q4);
== DIAGNOSTICS ==
[]
