crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__example_issue_4438.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
snapshot_kind: text
---
============================= test.js ==
import { componentQrl } from "@qwik.dev/core";
import { _noopQrl } from "@qwik.dev/core";
import { useSignal } from '@qwik.dev/core';
//
const q_App_component_ckEPmXZlub0 = /*#__PURE__*/ _noopQrl("App_component_ckEPmXZlub0");
//
q_App_component_ckEPmXZlub0.s(() => {
    const toggle = useSignal(false);
    return <>
			<div data-nu={toggle.value ? $localize`singular` : "plural"}></div>
			<div>{toggle.value ? $localize`singular` : $localize`plural`}</div>
		</>;
});
export const App = /*#__PURE__*/ componentQrl(q_App_component_ckEPmXZlub0);

== DIAGNOSTICS ==
[]
