crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__example_jsx.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
snapshot_kind: text
---
============================= test.js ==
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
//
const q_Foo_component_1_DvU6FitWglY = /*#__PURE__*/ qrl(()=>import("./test.tsx_Foo_component_1_DvU6FitWglY"), "Foo_component_1_DvU6FitWglY");
//
export const Lightweight = (props) => {
	return _jsxSorted("div", null, null, _jsxSorted(_Fragment, null, null, [<div />, <button {...props} />], 1, null), 1, "0");
};
export const Foo = /*#__PURE__*/ componentQrl(q_Foo_component_1_DvU6FitWglY);

============================= test.tsx_Foo_component_1_DvU6FitWglY.js (ENTRY POINT) ==
import { $ } from "@qwik.dev/core";
import { Lightweight } from "./test";
export const Foo_component_1_DvU6FitWglY = (props) => {
	return $(() => {
		return (
			<div>
				<>
					<div class="class"/>
					<div class="class"></div>
					<div class="class">12</div>
				</>
				<div class="class">
					<Lightweight {...props}/>
				</div>
				<div class="class">
					<div/>
					<div/>
					<div/>
				</div>
				<div class="class">
					{children}
				</div>
			</div>
		)
	});
};
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_1_DvU6FitWglY",
  "entry": null,
  "displayName": "test.tsx_Foo_component_1",
  "hash": "DvU6FitWglY",
  "canonicalFilename": "test.tsx_Foo_component_1_DvU6FitWglY",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    205,
    606
  ],
  "paramNames": [
    "props"
  ]
}
*/
============================= test.tsx_Foo_component_HTDRsvUbLiE.js (ENTRY POINT) ==
import { _captures } from "@qwik.dev/core";
import { Lightweight } from "./test";
export const Foo_component_HTDRsvUbLiE = () => {
		return (
			<div>
				<>
					<div class="class"/>
					<div class="class"></div>
					<div class="class">12</div>
				</>
				<div class="class">
					<Lightweight {...props}/>
				</div>
				<div class="class">
					<div/>
					<div/>
					<div/>
				</div>
				<div class="class">
					{children}
				</div>
			</div>
		)
	};
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_HTDRsvUbLiE",
  "entry": null,
  "displayName": "test.tsx_Foo_component",
  "hash": "HTDRsvUbLiE",
  "canonicalFilename": "test.tsx_Foo_component_HTDRsvUbLiE",
  "path": "",
  "extension": "js",
  "parent": "Foo_component_1_DvU6FitWglY",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": true,
  "captureNames": [
    "props"
  ],
  "loc": [
    237,
    577
  ]
}
*/
== DIAGNOSTICS ==
[]
