crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__example_jsx_import_source.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
assertion_line: 880
expression: output
---
============================= test.js ==
import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { qwikifyQrl } from "@qwik.dev/core";
/* @jsxImportSource react */
import { qwikify$ } from "./qwikfy";
const q_App2_qwikify_RKJW7oCMdS4 = /*#__PURE__*/ qrl(() => import("./test.tsx_App2_qwikify_RKJW7oCMdS4.tsx"), "App2_qwikify_RKJW7oCMdS4");
export const App = () => _jsxSorted("div", { onClick$: () => console.log("App") }, null, null, 1, "0");
export const App2 = qwikifyQrl(q_App2_qwikify_RKJW7oCMdS4);

============================= test.tsx_App2_qwikify_RKJW7oCMdS4.js (ENTRY POINT) ==
export const App2_qwikify_RKJW7oCMdS4 = () => (
	<div onClick$={()=>console.log('App2')}></div>
);
/*
{
  "origin": "test.tsx",
  "name": "App2_qwikify_RKJW7oCMdS4",
  "entry": null,
  "displayName": "test.tsx_App2_qwikify",
  "hash": "RKJW7oCMdS4",
  "canonicalFilename": "test.tsx_App2_qwikify_RKJW7oCMdS4",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "qwikify$",
  "captures": false,
  "loc": [
    167,
    234
  ]
}
*/
== DIAGNOSTICS ==
[]
