crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__example_jsx_listeners.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
snapshot_kind: text
---
============================= test.js ==
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
//
const q_Foo_component_HTDRsvUbLiE = /*#__PURE__*/ qrl(()=>import("./test.tsx_Foo_component_HTDRsvUbLiE"), "Foo_component_HTDRsvUbLiE");
//
export const Foo = /*#__PURE__*/ componentQrl(q_Foo_component_HTDRsvUbLiE);

============================= test.tsx_Foo_component_div_q_e_documentscroll_0FSbGzUROso.js (ENTRY POINT) ==
export const Foo_component_div_q_e_documentscroll_0FSbGzUROso = () => console.log("onDocumentScroll");

/*
{
  "origin": "test.tsx",
  "name": "Foo_component_div_q_e_documentscroll_0FSbGzUROso",
  "entry": null,
  "displayName": "test.tsx_Foo_component_div_q_e_documentscroll",
  "hash": "0FSbGzUROso",
  "canonicalFilename": "test.tsx_Foo_component_div_q_e_documentscroll_0FSbGzUROso",
  "path": "",
  "extension": "js",
  "parent": "Foo_component_1_DvU6FitWglY",
  "ctxKind": "eventHandler",
  "ctxName": "onDocumentScroll$",
  "captures": false,
  "loc": [
    242,
    277
  ]
}
*/
============================= test.tsx_Foo_component_div_q_e_document_scroll_6qyBttefepU.js (ENTRY POINT) ==
export const Foo_component_div_q_e_document_scroll_6qyBttefepU = () => console.log("onDocument-sCroll");

/*
{
  "origin": "test.tsx",
  "name": "Foo_component_div_q_e_document_scroll_6qyBttefepU",
  "entry": null,
  "displayName": "test.tsx_Foo_component_div_q_e_document_scroll",
  "hash": "6qyBttefepU",
  "canonicalFilename": "test.tsx_Foo_component_div_q_e_document_scroll_6qyBttefepU",
  "path": "",
  "extension": "js",
  "parent": "Foo_component_1_DvU6FitWglY",
  "ctxKind": "eventHandler",
  "ctxName": "onDocument-sCroll$",
  "captures": false,
  "loc": [
    407,
    443
  ]
}
*/
============================= test.tsx_Foo_component_div_host_onClick_cPEH970JbEY.js (ENTRY POINT) ==
export const Foo_component_div_host_onClick_cPEH970JbEY = () => console.log("host:onClick$");

/*
{
  "origin": "test.tsx",
  "name": "Foo_component_div_host_onClick_cPEH970JbEY",
  "entry": null,
  "displayName": "test.tsx_Foo_component_div_host_onClick",
  "hash": "cPEH970JbEY",
  "canonicalFilename": "test.tsx_Foo_component_div_host_onClick_cPEH970JbEY",
  "path": "",
  "extension": "js",
  "parent": "Foo_component_1_DvU6FitWglY",
  "ctxKind": "jsxProp",
  "ctxName": "host:onClick$",
  "captures": false,
  "loc": [
    527,
    559
  ]
}
*/
============================= test.tsx_Foo_component_div_q_e_documentscroll_1_d0Zn04qNgs0.js (ENTRY POINT) ==
export const Foo_component_div_q_e_documentscroll_1_d0Zn04qNgs0 = () => console.log("onWindowScroll");

/*
{
  "origin": "test.tsx",
  "name": "Foo_component_div_q_e_documentscroll_1_d0Zn04qNgs0",
  "entry": null,
  "displayName": "test.tsx_Foo_component_div_q_e_documentscroll_1",
  "hash": "d0Zn04qNgs0",
  "canonicalFilename": "test.tsx_Foo_component_div_q_e_documentscroll_1_d0Zn04qNgs0",
  "path": "",
  "extension": "js",
  "parent": "Foo_component_1_DvU6FitWglY",
  "ctxKind": "eventHandler",
  "ctxName": "onDocumentScroll$",
  "captures": false,
  "loc": [
    302,
    335
  ]
}
*/
============================= test.tsx_Foo_component_1_DvU6FitWglY.js (ENTRY POINT) ==
import { $ } from "@qwik.dev/core";
export const Foo_component_1_DvU6FitWglY = () => {
		const handler = $(() => console.log('reused'));
		return (
			<div
				onClick$={()=>console.log('onClick$')}
				onDocumentScroll$={()=>console.log('onDocumentScroll')}
				onDocumentScroll$={()=>console.log('onWindowScroll')}

				on-cLick$={()=>console.log('on-cLick$')}
				onDocument-sCroll$={()=>console.log('onDocument-sCroll')}
				onDocument-scroLL$={()=>console.log('onDocument-scroLL')}

				host:onClick$={()=>console.log('host:onClick$')}
				host:onDocumentScroll$={()=>console.log('host:onDocument:scroll')}
				host:onDocumentScroll$={()=>console.log('host:onWindow:scroll')}

				onKeyup$={handler}
				onDocument:keyup$={handler}
				onWindow:keyup$={handler}

				custom$={()=>console.log('custom')}
			/>
		)
	};
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_1_DvU6FitWglY",
  "entry": null,
  "displayName": "test.tsx_Foo_component_1",
  "hash": "DvU6FitWglY",
  "canonicalFilename": "test.tsx_Foo_component_1_DvU6FitWglY",
  "path": "",
  "extension": "js",
  "parent": "Foo_component_HTDRsvUbLiE",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    97,
    841
  ]
}
*/
============================= test.tsx_Foo_component_div_host_onDocumentScroll_1_Em1LspK7JVg.js (ENTRY POINT) ==
export const Foo_component_div_host_onDocumentScroll_1_Em1LspK7JVg = () => console.log("host:onWindow:scroll");

/*
{
  "origin": "test.tsx",
  "name": "Foo_component_div_host_onDocumentScroll_1_Em1LspK7JVg",
  "entry": null,
  "displayName": "test.tsx_Foo_component_div_host_onDocumentScroll_1",
  "hash": "Em1LspK7JVg",
  "canonicalFilename": "test.tsx_Foo_component_div_host_onDocumentScroll_1_Em1LspK7JVg",
  "path": "",
  "extension": "js",
  "parent": "Foo_component_1_DvU6FitWglY",
  "ctxKind": "jsxProp",
  "ctxName": "host:onDocumentScroll$",
  "captures": false,
  "loc": [
    660,
    699
  ]
}
*/
============================= test.tsx_Foo_component_handler_H10xZtD0e7w.js (ENTRY POINT) ==
export const Foo_component_handler_H10xZtD0e7w = () => console.log("reused");

/*
{
  "origin": "test.tsx",
  "name": "Foo_component_handler_H10xZtD0e7w",
  "entry": null,
  "displayName": "test.tsx_Foo_component_handler",
  "hash": "H10xZtD0e7w",
  "canonicalFilename": "test.tsx_Foo_component_handler_H10xZtD0e7w",
  "path": "",
  "extension": "js",
  "parent": "Foo_component_1_DvU6FitWglY",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    125,
    155
  ]
}
*/
============================= test.tsx_Foo_component_HTDRsvUbLiE.js (ENTRY POINT) ==
import { $ } from "@qwik.dev/core";
export const Foo_component_HTDRsvUbLiE = () => {

	return $(() => {
		const handler = $(() => console.log('reused'));
		return (
			<div
				onClick$={()=>console.log('onClick$')}
				onDocumentScroll$={()=>console.log('onDocumentScroll')}
				onDocumentScroll$={()=>console.log('onWindowScroll')}

				on-cLick$={()=>console.log('on-cLick$')}
				onDocument-sCroll$={()=>console.log('onDocument-sCroll')}
				onDocument-scroLL$={()=>console.log('onDocument-scroLL')}

				host:onClick$={()=>console.log('host:onClick$')}
				host:onDocumentScroll$={()=>console.log('host:onDocument:scroll')}
				host:onDocumentScroll$={()=>console.log('host:onWindow:scroll')}

				onKeyup$={handler}
				onDocument:keyup$={handler}
				onWindow:keyup$={handler}

				custom$={()=>console.log('custom')}
			/>
		)
	});
};
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_HTDRsvUbLiE",
  "entry": null,
  "displayName": "test.tsx_Foo_component",
  "hash": "HTDRsvUbLiE",
  "canonicalFilename": "test.tsx_Foo_component_HTDRsvUbLiE",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    69,
    870
  ]
}
*/
============================= test.tsx_Foo_component_div_q_e_c_lick_kX5SiYdz650.js (ENTRY POINT) ==
export const Foo_component_div_q_e_c_lick_kX5SiYdz650 = () => console.log("on-cLick$");

/*
{
  "origin": "test.tsx",
  "name": "Foo_component_div_q_e_c_lick_kX5SiYdz650",
  "entry": null,
  "displayName": "test.tsx_Foo_component_div_q_e_c_lick",
  "hash": "kX5SiYdz650",
  "canonicalFilename": "test.tsx_Foo_component_div_q_e_c_lick_kX5SiYdz650",
  "path": "",
  "extension": "js",
  "parent": "Foo_component_1_DvU6FitWglY",
  "ctxKind": "eventHandler",
  "ctxName": "on-cLick$",
  "captures": false,
  "loc": [
    353,
    381
  ]
}
*/
============================= test.tsx_Foo_component_div_custom_pyHnxab17ms.js (ENTRY POINT) ==
export const Foo_component_div_custom_pyHnxab17ms = () => console.log("custom");

/*
{
  "origin": "test.tsx",
  "name": "Foo_component_div_custom_pyHnxab17ms",
  "entry": null,
  "displayName": "test.tsx_Foo_component_div_custom",
  "hash": "pyHnxab17ms",
  "canonicalFilename": "test.tsx_Foo_component_div_custom_pyHnxab17ms",
  "path": "",
  "extension": "js",
  "parent": "Foo_component_1_DvU6FitWglY",
  "ctxKind": "jsxProp",
  "ctxName": "custom$",
  "captures": false,
  "loc": [
    801,
    826
  ]
}
*/
============================= test.tsx_Foo_component_div_q_e_document_scroll_1_wphyTkeintI.js (ENTRY POINT) ==
export const Foo_component_div_q_e_document_scroll_1_wphyTkeintI = () => console.log("onDocument-scroLL");

/*
{
  "origin": "test.tsx",
  "name": "Foo_component_div_q_e_document_scroll_1_wphyTkeintI",
  "entry": null,
  "displayName": "test.tsx_Foo_component_div_q_e_document_scroll_1",
  "hash": "wphyTkeintI",
  "canonicalFilename": "test.tsx_Foo_component_div_q_e_document_scroll_1_wphyTkeintI",
  "path": "",
  "extension": "js",
  "parent": "Foo_component_1_DvU6FitWglY",
  "ctxKind": "eventHandler",
  "ctxName": "onDocument-scroLL$",
  "captures": false,
  "loc": [
    469,
    505
  ]
}
*/
============================= test.tsx_Foo_component_div_q_e_click_YEa2A5ADUOg.js (ENTRY POINT) ==
export const Foo_component_div_q_e_click_YEa2A5ADUOg = () => console.log("onClick$");

/*
{
  "origin": "test.tsx",
  "name": "Foo_component_div_q_e_click_YEa2A5ADUOg",
  "entry": null,
  "displayName": "test.tsx_Foo_component_div_q_e_click",
  "hash": "YEa2A5ADUOg",
  "canonicalFilename": "test.tsx_Foo_component_div_q_e_click_YEa2A5ADUOg",
  "path": "",
  "extension": "js",
  "parent": "Foo_component_1_DvU6FitWglY",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    190,
    217
  ]
}
*/
============================= test.tsx_Foo_component_div_host_onDocumentScroll_Zip7mifsjRY.js (ENTRY POINT) ==
export const Foo_component_div_host_onDocumentScroll_Zip7mifsjRY = () => console.log("host:onDocument:scroll");

/*
{
  "origin": "test.tsx",
  "name": "Foo_component_div_host_onDocumentScroll_Zip7mifsjRY",
  "entry": null,
  "displayName": "test.tsx_Foo_component_div_host_onDocumentScroll",
  "hash": "Zip7mifsjRY",
  "canonicalFilename": "test.tsx_Foo_component_div_host_onDocumentScroll_Zip7mifsjRY",
  "path": "",
  "extension": "js",
  "parent": "Foo_component_1_DvU6FitWglY",
  "ctxKind": "jsxProp",
  "ctxName": "host:onDocumentScroll$",
  "captures": false,
  "loc": [
    589,
    630
  ]
}
*/
== DIAGNOSTICS ==
[]
