crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__example_lib_mode.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
snapshot_kind: text
---
============================= test.js ==
import { componentQrl } from "@qwik.dev/core";
import { serverQrl } from "@qwik.dev/core";
import { useStyleQrl } from "@qwik.dev/core";
import { useTaskQrl } from "@qwik.dev/core";
import { inlinedQrl } from "@qwik.dev/core";
import { useSignal } from '@qwik.dev/core';
export const Works = /*#__PURE__*/ componentQrl((props)=>{
    useStyleQrl(STYLES, "Works_component_useStyle_i40UL9JyQpg");
    const text = "hola";
    const sig = useSignal("hola");
    useTaskQrl(()=>{
        console.log(sig.value, text);
    }, "Works_component_useTask_pjo5U5Ikll0", [sig, text]);
    return /*#__PURE__*/ _jsxSorted("div", { onClick$: serverQrl(()=>console.log("in server", sig.value, text), "Works_component_div_div_onClick_server_lFRg0PjqeUM", [sig, text]) }, null, null, 1, null);
}, "Works_component_t45qL4vNGv0");
const STYLES = ".class {}";

== DIAGNOSTICS ==
[]
